--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,11 @@
   ],
   "scripts": {
     "postinstall": "psc-package update",
-    "build": "pulp browserify --to static/app.js",
+    "clean": "rimraf static/dist",
+    "build": "npm run clean && webpack --config ./webpack.config.js --progress --profile --colors",
+    "watch": "npm run clean && webpack-dev-server --content-base static/ --hot --inline --config webpack.config.js",
+    "serve": "npm run build && serve -s static",
+    "start": "npm run watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,7 +33,17 @@
     "react-dom": "^15.0.0"
   },
   "devDependencies": {
+    "preact": "^8.2.1",
+    "preact-compat": "^3.17.0",
     "pulp": "^12.0.1",
-    "purescript": "^0.11.7"
+    "purescript": "^0.11.7",
+    "purescript-psa": "^0.5.1",
+    "purs-loader": "^3.1.0",
+    "rimraf": "^2.5.2",
+    "serve": "^5.2.4",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.7.1",
+    "webpack-node-externals": "^1.5.4",
+    "xhr2": "^0.1.3"
   }
 }
