--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "postinstall": "psc-package update",
     "clean": "rimraf static/dist",
     "build": "npm run clean && webpack --config ./webpack.config.js --progress --profile --colors",
-    "watch": "npm run clean && webpack-dev-server --content-base static/ --hot --inline --config webpack.config.js",
+    "watch": "npm run clean && webpack-dev-server --content-base static/ --hot --inline --history-api-fallback --config webpack.config.js",
     "serve": "npm run build && serve -s static",
     "start": "npm run watch",
     "test": "echo \"Error: no test specified\" && exit 1"
