--- a/stack.yaml
+++ b/stack.yaml
@@ -1,8 +1,15 @@
-resolver: lts-10.0
+resolver: lts-12.1
 packages:
   - '.'
 extra-deps:
   - datetime-0.3.1
+  - servant-0.13.0.1
+  - servant-client-0.13.0.1
+  - servant-client-core-0.13.0.1
+  - servant-server-0.13.0.1
+  - servant-docs-0.11.2
+  - servant-purescript-0.9.0.2
+  - servant-subscriber-0.6.0.1
 docker:
   enable: true
 
