--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -13,10 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-haskell@v1
+    - uses: actions/setup-haskell@v1.1
       with:
         ghc-version: '8.8.2'
-        cabal-version: '3.0'
+        enable-stack: true
+        stack-version: 'latest'
 
     - name: Cache
       uses: actions/cache@v1
@@ -30,11 +31,5 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
 
-    - name: Install dependencies
-      run: |
-        cabal update
-        cabal build --only-dependencies --enable-tests --enable-benchmarks
-    - name: Build
-      run: cabal build --enable-tests --enable-benchmarks all
     - name: Run tests
-      run: cabal test all
+      run: stack test --fast
