--- a/example-servant-persistent.cabal
+++ b/example-servant-persistent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: b56382726ee07e5169add9ddf95e13dafc98305a3e14b2aae997e368bcf29b34
+-- hash: b6cb688e6deb7265cca44c0397530641900bed953479c0d1399a84b16b883bed
 
 name:           example-servant-persistent
 version:        0.1.0.0
@@ -17,9 +17,8 @@ license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
 
-executable example-servant-persistent
-  main-is: Main.hs
-  other-modules:
+library
+  exposed-modules:
       Api
       Api.Post
       Api.Report
@@ -39,9 +38,44 @@ executable example-servant-persistent
       Server.Report
       Server.User
       Util
+  other-modules:
       Paths_example_servant_persistent
   hs-source-dirs:
       lib
+  ghc-options: -Wall
+  build-depends:
+      aeson
+    , base >=4.8 && <5
+    , basement
+    , bytestring
+    , dhall
+    , http-types
+    , lens
+    , monad-logger
+    , mtl
+    , persistent
+    , persistent-sqlite
+    , persistent-template
+    , resourcet
+    , servant
+    , servant-client
+    , servant-docs
+    , servant-server
+    , string-conversions
+    , swagger2
+    , text
+    , time
+    , transformers
+    , wai
+    , warp
+    , yaml
+  default-language: Haskell2010
+
+executable example-servant-persistent
+  main-is: Main.hs
+  other-modules:
+      Paths_example_servant_persistent
+  hs-source-dirs:
       src
   ghc-options: -Wall
   build-depends:
@@ -50,6 +84,7 @@ executable example-servant-persistent
     , basement
     , bytestring
     , dhall
+    , example-servant-persistent
     , http-types
     , lens
     , monad-logger
@@ -76,28 +111,8 @@ executable example-servant-persistent
 executable example-servant-persistent-doc
   main-is: Doc.hs
   other-modules:
-      Api
-      Api.Post
-      Api.Report
-      Api.RestApi
-      Api.User
-      App
-      Config
-      Environment
-      Model
-      Model.Json
-      Model.Post
-      Model.Report
-      Model.Schema
-      Model.User
-      Server
-      Server.Post
-      Server.Report
-      Server.User
-      Util
       Paths_example_servant_persistent
   hs-source-dirs:
-      lib
       doc
   ghc-options: -Wall
   build-depends:
@@ -107,6 +122,7 @@ executable example-servant-persistent-doc
     , basement
     , bytestring
     , dhall
+    , example-servant-persistent
     , http-types
     , lens
     , monad-logger
@@ -132,28 +148,8 @@ executable example-servant-persistent-doc
 executable example-servant-persistent-swagger
   main-is: Swagger.hs
   other-modules:
-      Api
-      Api.Post
-      Api.Report
-      Api.RestApi
-      Api.User
-      App
-      Config
-      Environment
-      Model
-      Model.Json
-      Model.Post
-      Model.Report
-      Model.Schema
-      Model.User
-      Server
-      Server.Post
-      Server.Report
-      Server.User
-      Util
       Paths_example_servant_persistent
   hs-source-dirs:
-      lib
       swagger
   ghc-options: -Wall
   build-depends:
@@ -163,6 +159,7 @@ executable example-servant-persistent-swagger
     , basement
     , bytestring
     , dhall
+    , example-servant-persistent
     , http-types
     , lens
     , monad-logger
@@ -189,28 +186,8 @@ executable example-servant-persistent-swagger
 executable psGenerator
   main-is: PSGenerator.hs
   other-modules:
-      Api
-      Api.Post
-      Api.Report
-      Api.RestApi
-      Api.User
-      App
-      Config
-      Environment
-      Model
-      Model.Json
-      Model.Post
-      Model.Report
-      Model.Schema
-      Model.User
-      Server
-      Server.Post
-      Server.Report
-      Server.User
-      Util
       Paths_example_servant_persistent
   hs-source-dirs:
-      lib
       gen
   ghc-options: -Wall
   build-depends:
@@ -220,6 +197,7 @@ executable psGenerator
     , bytestring
     , containers
     , dhall
+    , example-servant-persistent
     , filepath
     , http-api-data
     , http-types
@@ -253,29 +231,9 @@ test-suite spec
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Api
-      Api.Post
-      Api.Report
-      Api.RestApi
-      Api.User
-      App
-      Config
-      Environment
-      Model
-      Model.Json
-      Model.Post
-      Model.Report
-      Model.Schema
-      Model.User
-      Server
-      Server.Post
-      Server.Report
-      Server.User
-      Util
       AppSpec
       Paths_example_servant_persistent
   hs-source-dirs:
-      lib
       test
   ghc-options: -Wall
   build-depends:
@@ -284,6 +242,7 @@ test-suite spec
     , basement
     , bytestring
     , dhall
+    , example-servant-persistent
     , exceptions
     , hspec
     , http-client
