add yaml extension

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
 	"image": "haskell:8.8.4",
 	"extensions": [
 		"haskell.haskell",
-		"editorconfig.editorconfig"
+		"editorconfig.editorconfig",
+		"redhat.vscode-yaml"
 	]
 }
