--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,9 @@
 		"redhat.vscode-yaml"
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [
+		3000
+	],
 	// Uncomment the next line to run commands after the container is created - for example installing curl.
 	"postCreateCommand": "apt-get update && apt-get install -y git",
 	// Uncomment when using a ptrace-based debugger like C++, Go, and Rust
