--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
 	"dockerFile": "../Dockerfile",
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
-		"terminal.integrated.shell.linux": null
+		// "terminal.integrated.shell.linux": null
 	},
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
