--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -7,7 +7,7 @@ on:
     branches: [master]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +19,7 @@ jobs:
           stack-version: "latest"
 
       - name: Cache
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         env:
           cache-name: cache-stack
         with:
